--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,7 +1,7 @@
 ---
 # tasks file for zabbix-server
 - name: "Install zabbix server"
-  include_tasks: "{{ ansible_os_family }}.yml"
+  include_tasks: "{{ ansible_os_family|lower }}.yml"
 
 - name: "Install {{ zabbix_server_database_long }} database"
   include_tasks: "{{ zabbix_server_database_long }}.yml"
